objects/gss_acc_discrepancy__c.object
<CustomObject>
    <fields>
        <fullName>GSSIndex__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSSIndex</label>
        <referenceTo>GSS_Index__c</referenceTo>
        <relationshipLabel>gss_acc_discrepancies</relationshipLabel>
        <relationshipName>gss_acc_discrepancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Parent Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gss_index__c</fullName>
        <label>gss index</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gss_to_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>gss_to_SF</label>
        <type>Checkbox</type>
    </fields>
    <label>gss_acc_discrepancy</label>
    <nameField>
        <label>gss_acc_discrepancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>gss_acc_discrepancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>